v16.2/interfaces/GC.Spread.Common.IDateTimeFormat.md
# Interface: IDateTimeFormat

[Spread](../modules/GC.Spread.md).[Common](../modules/GC.Spread.Common.md).IDateTimeFormat

## Table of contents

### Properties

- [abbreviatedDayNames](GC.Spread.Common.IDateTimeFormat.md#abbreviateddaynames)
- [abbreviatedMonthGenitiveNames](GC.Spread.Common.IDateTimeFormat.md#abbreviatedmonthgenitivenames)
- [abbreviatedMonthNames](GC.Spread.Common.IDateTimeFormat.md#abbreviatedmonthnames)
- [amDesignator](GC.Spread.Common.IDateTimeFormat.md#amdesignator)
- [dayNames](GC.Spread.Common.IDateTimeFormat.md#daynames)
- [fullDateTimePattern](GC.Spread.Common.IDateTimeFormat.md#fulldatetimepattern)
- [longDatePattern](GC.Spread.Common.IDateTimeFormat.md#longdatepattern)
- [longTimePattern](GC.Spread.Common.IDateTimeFormat.md#longtimepattern)
- [monthDayPattern](GC.Spread.Common.IDateTimeFormat.md#monthdaypattern)
- [monthGenitiveNames](GC.Spread.Common.IDateTimeFormat.md#monthgenitivenames)
- [monthNames](GC.Spread.Common.IDateTimeFormat.md#monthnames)
- [pmDesignator](GC.Spread.Common.IDateTimeFormat.md#pmdesignator)
- [shortDatePattern](GC.Spread.Common.IDateTimeFormat.md#shortdatepattern)
- [shortTimePattern](GC.Spread.Common.IDateTimeFormat.md#shorttimepattern)
- [yearMonthPattern](GC.Spread.Common.IDateTimeFormat.md#yearmonthpattern)

## Properties

### <a id="abbreviateddaynames" name="abbreviateddaynames"></a> abbreviatedDayNames

• `Optional` **abbreviatedDayNames**: `string`[]

___

### <a id="abbreviatedmonthgenitivenames" name="abbreviatedmonthgenitivenames"></a> abbreviatedMonthGenitiveNames

• `Optional` **abbreviatedMonthGenitiveNames**: `string`[]

___

### <a id="abbreviatedmonthnames" name="abbreviatedmonthnames"></a> abbreviatedMonthNames

• `Optional` **abbreviatedMonthNames**: `string`[]

___

### <a id="amdesignator" name="amdesignator"></a> amDesignator

• `Optional` **amDesignator**: `string`

___

### <a id="daynames" name="daynames"></a> dayNames

• `Optional` **dayNames**: `string`[]

___

### <a id="fulldatetimepattern" name="fulldatetimepattern"></a> fullDateTimePattern

• `Optional` **fullDateTimePattern**: `string`

___

### <a id="longdatepattern" name="longdatepattern"></a> longDatePattern

• `Optional` **longDatePattern**: `string`

___

### <a id="longtimepattern" name="longtimepattern"></a> longTimePattern

• `Optional` **longTimePattern**: `string`

___

### <a id="monthdaypattern" name="monthdaypattern"></a> monthDayPattern

• `Optional` **monthDayPattern**: `string`

___

### <a id="monthgenitivenames" name="monthgenitivenames"></a> monthGenitiveNames

• `Optional` **monthGenitiveNames**: `string`[]

___

### <a id="monthnames" name="monthnames"></a> monthNames

• `Optional` **monthNames**: `string`[]

___

### <a id="pmdesignator" name="pmdesignator"></a> pmDesignator

• `Optional` **pmDesignator**: `string`

___

### <a id="shortdatepattern" name="shortdatepattern"></a> shortDatePattern

• `Optional` **shortDatePattern**: `string`

___

### <a id="shorttimepattern" name="shorttimepattern"></a> shortTimePattern

• `Optional` **shortTimePattern**: `string`

___

### <a id="yearmonthpattern" name="yearmonthpattern"></a> yearMonthPattern

• `Optional` **yearMonthPattern**: `string`
