v18.0/interfaces/GC.Spread.Common.IDateTimeFormat.md
# Interface: IDateTimeFormat

[Spread](../modules/GC.Spread.md).[Common](../modules/GC.Spread.Common.md).IDateTimeFormat

## Table of contents

### Properties

- [abbreviatedDayNames](GC.Spread.Common.IDateTimeFormat.md#abbreviateddaynames)
- [abbreviatedMonthGenitiveNames](GC.Spread.Common.IDateTimeFormat.md#abbreviatedmonthgenitivenames)
- [abbreviatedMonthNames](GC.Spread.Common.IDateTimeFormat.md#abbreviatedmonthnames)
- [amDesignator](GC.Spread.Common.IDateTimeFormat.md#amdesignator)
- [dayNames](GC.Spread.Common.IDateTimeFormat.md#daynames)
- [defaultDatePattern](GC.Spread.Common.IDateTimeFormat.md#defaultdatepattern)
- [fullDateTimePattern](GC.Spread.Common.IDateTimeFormat.md#fulldatetimepattern)
- [longDatePattern](GC.Spread.Common.IDateTimeFormat.md#longdatepattern)
- [longTimePattern](GC.Spread.Common.IDateTimeFormat.md#longtimepattern)
- [monthDayPattern](GC.Spread.Common.IDateTimeFormat.md#monthdaypattern)
- [monthGenitiveNames](GC.Spread.Common.IDateTimeFormat.md#monthgenitivenames)
- [monthNames](GC.Spread.Common.IDateTimeFormat.md#monthnames)
- [pmDesignator](GC.Spread.Common.IDateTimeFormat.md#pmdesignator)
- [shortDatePattern](GC.Spread.Common.IDateTimeFormat.md#shortdatepattern)
- [shortTimePattern](GC.Spread.Common.IDateTimeFormat.md#shorttimepattern)
- [yearMonthPattern](GC.Spread.Common.IDateTimeFormat.md#yearmonthpattern)

## Properties

### <a id="abbreviateddaynames" name="abbreviateddaynames"></a> abbreviatedDayNames

• `Optional` **abbreviatedDayNames**: `string`[]

指定“ddd”的日期格式。

___

### <a id="abbreviatedmonthgenitivenames" name="abbreviatedmonthgenitivenames"></a> abbreviatedMonthGenitiveNames

• `Optional` **abbreviatedMonthGenitiveNames**: `string`[]

指定“MMM”的月份格式。

___

### <a id="abbreviatedmonthnames" name="abbreviatedmonthnames"></a> abbreviatedMonthNames

• `Optional` **abbreviatedMonthNames**: `string`[]

指定“MMM”的月份格式。

___

### <a id="amdesignator" name="amdesignator"></a> amDesignator

• `Optional` **amDesignator**: `string`

指示 AM 指示符。

___

### <a id="daynames" name="daynames"></a> dayNames

• `Optional` **dayNames**: `string`[]

指定“dddd”的日期格式化程序。

___

### <a id="defaultdatepattern" name="defaultdatepattern"></a> defaultDatePattern

• `Optional` **defaultDatePattern**: `string`

指定单元格格式化程序为空或“常规”且单元格值为带时间的日期的情况下的默认日期格式化程序。

___

### <a id="fulldatetimepattern" name="fulldatetimepattern"></a> fullDateTimePattern

• `Optional` **fullDateTimePattern**: `string`

指定“F”的标准日期格式化程序。

___

### <a id="longdatepattern" name="longdatepattern"></a> longDatePattern

• `Optional` **longDatePattern**: `string`

指定“D”的标准日期格式化程序。

___

### <a id="longtimepattern" name="longtimepattern"></a> longTimePattern

• `Optional` **longTimePattern**: `string`

指定“T”和“U”的标准日期格式化程序。

___

### <a id="monthdaypattern" name="monthdaypattern"></a> monthDayPattern

• `Optional` **monthDayPattern**: `string`

指定“M”和“m”的标准日期格式化程序。

___

### <a id="monthgenitivenames" name="monthgenitivenames"></a> monthGenitiveNames

• `Optional` **monthGenitiveNames**: `string`[]

指定“MMMM”的格式化程序。

___

### <a id="monthnames" name="monthnames"></a> monthNames

• `Optional` **monthNames**: `string`[]

指定“M”或“MM”的格式化程序。

___

### <a id="pmdesignator" name="pmdesignator"></a> pmDesignator

• `Optional` **pmDesignator**: `string`

指示 PM 指示符。

___

### <a id="shortdatepattern" name="shortdatepattern"></a> shortDatePattern

• `Optional` **shortDatePattern**: `string`

指定“d”的标准日期格式化程序。

___

### <a id="shorttimepattern" name="shorttimepattern"></a> shortTimePattern

• `Optional` **shortTimePattern**: `string`

指定“t”的标准日期格式化程序。

___

### <a id="yearmonthpattern" name="yearmonthpattern"></a> yearMonthPattern

• `Optional` **yearMonthPattern**: `string`

指定“y”和“Y”的标准日期格式化程序。
